test/tests/stages/18_structures/invalid_types/tag_resolution/invalid_shadow_self_reference.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  {
  struct
  identifier(s)
  identifier(nested)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
